plugins {
    id 'java'
    id 'com.github.johnrengelman.shadow' version '7.1.0'
}

group 'com.arcanewarrior'
version '0.1.7'

repositories {
    mavenCentral()
    maven { url 'https://repo.spongepowered.org/maven' }
    maven { url 'https://jitpack.io' }
}

dependencies {
    compileOnly 'com.github.Minestom:Minestom:62b9e80d46'
    // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind
    compileOnly group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.0'
    compileOnly 'org.xerial:sqlite-jdbc:3.36.0.3'
    compileOnly 'org.mongodb:mongodb-driver-sync:4.4.0'
}

shadowJar {
    archiveClassifier.set('')
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}